--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- responsive -->
   <title>Services — Rafay Advocate</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css"> <!-- css link -->
+  <link rel="stylesheet" href="style.css"> <!-- css link -->
 </head>
 <body style="height: 100vh;">
 
@@ -59,3 +59,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
