--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- responsive -->
   <title>About — Muhammad Rafay | Advocate</title> <!-- title -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- small bootstrap -->
-  <link rel="stylesheet" href="css/style.css"> <!-- custom css -->
+  <link rel="stylesheet" href="style.css"> <!-- custom css -->
 </head>
 <body>
 
@@ -55,3 +55,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
